# Languages-university

./: README.md
asm/: a.out  memcpy.cpp  run
asm/trampoline/trampoline/: 3.asm  main.cpp  trampoline.h
asm/trampoline/trampoline.xcodeproj/: project.pbxproj
asm/word_count/: word_count.cpp
big_integer_opt/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  main.cpp  vector_optimized.cpp  vector_optimized.h
proxy_server_s/proxy_server_s/: CMakeLists.txt  exceptions.h  http.cpp  http.h  http_utils.h  kqueue_.cpp  kqueue_.h  main.cpp  proxy.cpp  resolver_new.h  server_run  sockets.cpp  sockets.h  task_wrapper.cpp  timeout.h
proxy_server_s/proxy_server_s.xcodeproj/: project.pbxproj
proxy_server_s/proxy_server_s/Debug/: server_run
proxy_server_s/proxy_server_s/build_temp/: CMakeCache.txt  Makefile  cmake_install.cmake
proxy_server_s/proxy_server_s/include/: http.h  proxy.h  task_wrapper.h
proxy_server_s/proxy_server_s/proxy.o.dSYM/Contents/: Info.plist
proxy_server_s/proxy_server_s/server/server.xcodeproj/: project.pbxproj
proxy_server_s/proxy_server_s/server/server.xcodeproj/project.xcworkspace/xcuserdata/macbook.xcuserdatad/: UserInterfaceState.xcuserstate
proxy_server_s/proxy_server_s/server/server.xcodeproj/xcuserdata/macbook.xcuserdatad/xcschemes/: server.xcscheme  xcschememanagement.plist
proxy_server_s/proxy_server_s/source/: http.cpp  main.cpp  proxy.cpp  resolver_new.cpp  sockets.cpp  timeout.cpp
trampoline/trampoline/: 1.asm  main.cpp  trampoline.h
с++exam/с++exam/: c++.cpp  exam.cpp  function.h  main.cpp
(+41 files in other folders)
